--- a/devproject/devapp/templates/devapp/base.html
+++ b/devproject/devapp/templates/devapp/base.html
@@ -48,7 +48,7 @@
         .copy{
             color:white;
             text-align:center;
-            font-family:monospace;
+            font-family:heiti tc;
         }
 
     </style>
